# piecewise-polynomial-rust

./: .gitignore  Cargo.toml  shell.nix
.github/workflows/: ci.yaml
benches/: haskell_ref.rs  piecewise.rs  piecewise_evaluator.rs  poly_evaluate.rs
nix/: mozilla-overlay.nix  nixpkgs.nix
src/: constrained_spline_interpolation.rs  lib.rs  linear.rs  linear_interpolation.rs  log_poly.rs  log_polynomial.rs  piecewise.rs  piecewise_polynomial.rs  poly.rs  polynomial.rs  spline.rs
