[package]
name = "piecewise_polynomial"
version = "0.1.0"
authors = ["Mateusz Kowalczyk <fuuzetsu@fuuzetsu.co.uk>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arbitrary = { version = "0.4", features = ["derive"] }

[dev-dependencies]
assert_approx_eq = "1.1.0"
criterion = "0.3.3"

[[bench]]
name = "poly_evaluate"
harness = false

[[bench]]
name = "haskell_ref"
harness = false

[[bench]]
name = "piecewise"
harness = false

[profile.bench]
debug = true
