[package]
name = "piecewise_polynomial"
version = "0.1.0"
authors = ["Mateusz Kowalczyk <fuuzetsu@fuuzetsu.co.uk>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arbitrary = { version = "0.4.7", features = ["derive"] }
approx = "0.4.0"
serde = { version = "1.0.123", features = ["derive"] }

[dev-dependencies]
assert_approx_eq = "1.1.0"
criterion = "0.3.4"

[[bench]]
name = "poly_evaluate"
harness = false

[[bench]]
name = "haskell_ref"
harness = false

[[bench]]
name = "piecewise"
harness = false

[profile.release]
debug = true
lto = "thin" # full makes no differenc
codegen-units = 1

[profile.bench]
debug = true
lto = "thin"
codegen-units = 1
